style.css
* {
  box-sizing: border-box;
}

body {
  height: 100%;
  margin: 0;
  padding: 0;
}

/* Always set the map height explicitly to define the size of the div
 * element that contains the map. */
#map {
  height: 100%;
}

.popup-contents {
  height: auto;
  width: 100%;
}

.popup-photos {
  display: flex;
  flex-direction: row;
}

.popup-photos img {
  height: auto;
  width: 100%;
}

.popup-photos-main {
  padding-right: 1px;
  width: 66.66%;
}

.popup-photos-other {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  padding-left: 1px;
  width: 33.33%;
}

.popup-price-and-phone {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.popup-spacer {
  width: 1em;
}
.popup-phone {
  text-align: right;
}

.popup-price,
.popup-phone,
.popup-description {
  font-size: 130%;
}

.popup-location
{
  font-size: 120%;
}

.popup-info,
.popup-summary {
  width: 100%;
}

.marker-highlight {
  filter: hue-rotate(180deg);
}

